Added documentation, renamed modules based on ICD-10 and LOINC codes, and generally restructured the directory layout

--- a/config.ini
+++ b/config.ini
@@ -8,23 +8,33 @@
 # performance penalty as the unit registry may be substantiated multiple times.
 # This per-module flexibility may be removed in a future version.
 
-[lisanalyze_na_plasma]
+[DEFAULT]
 # Automated unit conversion with Pint
 auto_unit_conversion = True
-preferred_unit = mmol/l
 # When being evaluated along with other items, how big of a difference between
 # evaluation times of the items is acceptable.
 # Time can be expressed in the following order: weeks, days, hours, minutes;
 # numbers supplied can be floats (e.g., 1.5 weeks 1 day 17 hours 12 minutes).
 time_range_before = 1 day
 time_range_after = 1 day
+
+## Lab items ##
+### Serum sodium
+[lisanalyze_2951-2]
+# Default sodium level
+preferred_unit = mmol/l
 # Normal glucose level used as basis for correction. Unit is mg/dl.
 glucose_normal = 100
 
 ## Diseases ##
-[lisanalyze_hyponatremia]
+### Hyponatremia
+[lisanalyze_E87_1]
 # Fuzzy range of values inside which values falling outside of the reference
 # range are still considered normal. Defined as
 # (value - ref_upper) / (ref_upper - ref_lower) or
 # (ref_lower - value) / (ref_upper - ref_lower).
 fuzzy_range = 0.05
+# Maximum allowed rate for correction of hyponatremia (in mEq/L/day)
+max_correction_rate = 10
+### Acute kidney injury
+[lisanalyze_N17_9]
